Inspect Java targets across JAR classfiles (#94)